# kitchen_mic

./: .gitignore  .milestone.template  README.md  install.sh  project.plan  pyproject.toml  requirements.txt
config/: default.yaml
config/systemd/: kitchen-mic.service
debug/: test.plan  test_audio.py  test_audio_viz.py  test_base_viz.py  test_capture.py  test_conversation.py  test_conversation_detector.py  test_orchestrator.py  test_summary.py  test_transcription.py  test_vad.py
debug/debug/conversations/: conversation_20241208_162257.json
debug/debug/storage/2024/12/08/171459_Discussing Process of Recording Transcribing and O/: metadata.json
debug/debug/transcriptions/: conversation_20241208_162257.json  conversation_20241208_162257_summary.json
debug/test_output/20241208_152228/: conversation_26103891-efe3-4608-85b5-1ebbd1e36020.txt
milestone/: 01-setup.plan  02-vad.plan  03-transcription.plan  04-llm.plan  05-pipeline.plan  06-deployment.plan  06-search.plan
src/: messages.py
src/audio/: capture.py  player.py  utils.py
src/config/: __init__.py  audio.py  manager.py
src/conversation/: __init__.py  detector.py  orchestrator.py
src/llm/: client.py  processor.py
src/pipeline/: README.md  pipeline.py.future
src/service/: __init__.py  kitchen_mic.py
src/storage/: __init__.py  persistence.py
src/transcription/: __init__.py  processor.py
src/vad/: processor.py
src/visualization/: __init__.py  audio.py  base.py  conversation.py  core.py  vad.py
(+4 files in other folders)
